# ros-humble-template

./: .clang-format  .gitignore  CLAUDE.md  Dockerfile  PLANNING.md  README.md  TASK.md  docker-compose.yml  run_tests.sh  test_docker.sh
.github/workflows/: ci.yml
src/py_template_node/: package.xml  setup.cfg  setup.py
src/py_template_node/launch/: foxglove.launch.py  py_template.launch.py
src/py_template_node/py_template_node/: __init__.py  performance_monitor.py  py_template_node.py  structured_logger.py
src/py_template_node/test/: test_integration.py  test_py_template_node.py
src/ros_template_node/: CMakeLists.txt  package.xml
src/ros_template_node/include/ros_template_node/: performance_monitor.hpp  structured_logger.hpp  template_node.hpp
src/ros_template_node/launch/: foxglove.launch.py  template.launch.py
src/ros_template_node/src/: main.cpp  performance_monitor.cpp  structured_logger.cpp  template_node.cpp
src/ros_template_node/test/: test_integration.cpp  test_template_node.cpp
